2008-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 2113627 
	* source/org/jfree/chart/renderer/XYStepRenderer.java
	(drawItem): Draw item labels in second pass only, add chart
	entity info in first pass only.

2008-09-23  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2121818 (fix by Christoph Beck):
    * source/org/jfree/chart/plot/PiePlot.java
    (getLabelLinkDepth): New method,
    (drawLeftLabels): Use getLabelLinkDepth(),
    (drawRightLabels): Likewise,
    * source/org/jfree/chart/plot/RingPlot.java
    (getLabelLinkDepth): New method.

2008-09-23  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/StackedXYBarRenderer.java
    (drawItem): Check shadow visibility before drawing shadow.

----------  JFREECHART 1.0.11 RELEASED ------------------------

2008-09-19  David Gilbert  <david.gilbert@object-refinery.com>

    Patch from Greg Darke, slightly modified:
    * source/org/jfree/chart/renderer/xy/XYItemRendererState.java
    (firstItemIndex): New field,
    (lastItemIndex): Likewise,
    (getFirstItemIndex): New method,
    (getLastItemIndex): New method,
    (startSeriesPass): Record first and last item indices,
    * source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
    (State.startSeriesPass): Reset series state,
    (drawItem): Removed code that is handled in State now,
    (drawPrimaryLineAsPath): Fix check for last item.

2008-09-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/StandardChartTheme.java
    (smallFont): New field,
    (crosshairPaint): New field,
    (createDarknessTheme): Initialise crosshairPaint,
    (StandardChartTheme): Initialise new fields,
    (getCrosshairPaint): New method,
    (setCrosshairPaint): Likewise,
    (applyToXYPlot): Apply crosshair paint and process annotations,
    (applyToXYAnnotation): New method,
    (equals): Check new fields,
    (writeObject): Handle crosshairPaint,