@@ -62,6 +62,7 @@
  * 06-Jul-2006 : Replace dataset methods getX() --> getXValue() (DG);
  * 08-Apr-2008 : Added findRangeBounds() override (DG);
  * 29-Apr-2008 : Added tickLength field (DG);
+ * 25-Sep-2008 : Check for non-null entity collection (DG);
  *
  */
 
@@ -438,7 +439,9 @@ public class HighLowRenderer extends AbstractXYItemRenderer
             }
         }
 
-        addEntity(entities, entityArea, dataset, series, item, 0.0, 0.0);
+        if (entities != null) {
+            addEntity(entities, entityArea, dataset, series, item, 0.0, 0.0);
+        }
 
     }
 
